--- a/ecs-fargate-blue-green/repo_files/Dockerfile
+++ b/ecs-fargate-blue-green/repo_files/Dockerfile
@@ -1,3 +1,3 @@
-FROM nicholasjackson/fake-service:v0.23.1
-
+FROM public.ecr.aws/muon/mirror/nicholasjackson/fake-service:v0.21.0
+# Common error: Server message: toomanyrequests: You have reached your pull rate limit
 ENV MESSAGE="Hello World from the client blueee!" NAME="client"
