--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,91 @@
 repos:
-  #- repo: https://github.com/terraform-docs/terraform-docs
-  #  rev: "v0.20.0"
-  #  hooks:
-  #    - id: terraform-docs-go
-  #      args: ["markdown", "table", "--output-file", "README.md", "./"]
+  - repo: https://github.com/terraform-docs/terraform-docs
+    rev: "v0.20.0"
+    hooks:
+      - id: terraform-docs-go
+        args:
+          [
+            "markdown",
+            "table",
+            "--output-file",
+            "README.md",
+            "./api-gw-lambda-ecr",
+          ]
+      - id: terraform-docs-go
+        args:
+          [
+            "markdown",
+            "table",
+            "--output-file",
+            "README.md",
+            "./centralized-internet-egress",
+          ]
+      - id: terraform-docs-go
+        args:
+          ["markdown", "table", "--output-file", "README.md", "./dns-resolver"]
+      - id: terraform-docs-go
+        args:
+          [
+            "markdown",
+            "table",
+            "--output-file",
+            "README.md",
+            "./entraid-federation/10_aws_cognito_identity_pool",
+          ]
+      - id: terraform-docs-go
+        args:
+          [
+            "markdown",
+            "table",
+            "--output-file",
+            "README.md",
+            "./entraid-federation/20_entraid",
+          ]
+
+      - id: terraform-docs-go
+        args: ["markdown", "table", "--output-file", "README.md", "./ipam-vpc"]
+
+      - id: terraform-docs-go
+        args:
+          [
+            "markdown",
+            "table",
+            "--output-file",
+            "README.md",
+            "./tgw-shared-services/1_tgw",
+          ]
+      - id: terraform-docs-go
+        args:
+          [
+            "markdown",
+            "table",
+            "--output-file",
+            "README.md",
+            "./tgw-shared-services/2_vpcs_acc1",
+          ]
+      - id: terraform-docs-go
+        args:
+          [
+            "markdown",
+            "table",
+            "--recursive",
+            "--output-file",
+            "README.md",
+            "./tgw-shared-services/3_vpcs_acc2",
+          ]
+      - id: terraform-docs-go
+        args:
+          [
+            "markdown",
+            "table",
+            "--recursive",
+            "--recursive-include-main",
+            "false",
+            "--output-file",
+            "README.md",
+            "./tgw-shared-services",
+          ]
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
