Add accounts-list tfdocs

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,9 @@ repos:
     hooks:
       - id: terraform-docs-go
         args:
+          ["markdown", "table", "--output-file", "README.md", "./accounts-list"]
+      - id: terraform-docs-go
+        args:
           [
             "markdown",
             "table",
